--- a/MVC_Product_Manager/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/MVC_Product_Manager/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -16,6 +16,30 @@
                 <input asp-for="Username" class="form-control" disabled />
             </div>
             <div class="form-group">
+                <label asp-for="Input.FirstName"></label>
+                <input asp-for="Input.FirstName" class="form-control" disabled />
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.LastName"></label>
+                <input asp-for="Input.LastName" class="form-control" disabled />
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Company"></label>
+                <input asp-for="Input.Company" class="form-control" disabled />
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Birthday"></label>
+                <input asp-for="Input.Birthday" class="form-control" disabled />
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Street"></label>
+                <input asp-for="Input.Street" class="form-control" disabled />
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.City"></label>
+                <input asp-for="Input.City" class="form-control" disabled />
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.PhoneNumber"></label>
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
