--- a/MVC_Product_Manager/Views/Product/Create.cshtml
+++ b/MVC_Product_Manager/Views/Product/Create.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ProductDescription" class="control-label"></label>
-                <input asp-for="ProductDescription" class="form-control" />
+                <textarea asp-for="ProductDescription" class="form-control"></textarea>
                 <span asp-validation-for="ProductDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
