--- a/MVC_Product_Manager/Views/Shared/_CategoryViewPartial.cshtml
+++ b/MVC_Product_Manager/Views/Shared/_CategoryViewPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<MVC_Product_Manager.Models.Category>
 
-<div class="card-group">
+<div class="card-columns">
     @foreach (var item in Model)
     {
         <div class="card">
@@ -21,5 +21,3 @@
         </div>
     }
 </div>
-
-
