--- a/MVC_Product_Manager/Views/Categories/Edit.cshtml
+++ b/MVC_Product_Manager/Views/Categories/Edit.cshtml
@@ -8,11 +8,16 @@
 
 <h4>Category</h4>
 <hr />
+<div class="container">
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <div class="form-group">
+                <label asp-for="Image" class="control-label" hidden></label>
+                <input asp-for="Image" class="form-control" type="hidden"/>
+                <span asp-validation-for="Image" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="CategoryName" class="control-label"></label>
                 <input asp-for="CategoryName" class="form-control" />
@@ -20,19 +25,32 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>
+                <label asp-for="ImageFile" class="control-label"></label>
+                <div class="custom-file">
+                    <input asp-for="ImageFile" class="custom-file-input" id="customFile">
+                    <label class="custom-file-label" for="customFile">Choose file</label>
+                </div>
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Speichern" class="btn btn-primary" />
             </div>
         </form>
     </div>
+    <div class="col-sm">
+        <div class="card mb-3">
+            <img class="card-img-top" src="~/images/@Model.Image" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">@Model.CategoryName</h5>
+                <p class="card-text">@Model.Description</p>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 
 <div>
