--- a/MVC_Product_Manager/Views/Categories/Edit.cshtml
+++ b/MVC_Product_Manager/Views/Categories/Edit.cshtml
@@ -3,54 +3,54 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
+<link href="~/lib/Trumbowyg-main/dist/ui/trumbowyg.min.css" rel="stylesheet" />
 <h1>Edit</h1>
 
 <h4>Category</h4>
 <hr />
 <div class="container">
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit" method="post" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Image" class="control-label" hidden></label>
-                <input asp-for="Image" class="form-control" type="hidden"/>
-                <span asp-validation-for="Image" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CategoryName" class="control-label"></label>
-                <input asp-for="CategoryName" class="form-control" />
-                <span asp-validation-for="CategoryName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" class="form-control"></textarea>
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ImageFile" class="control-label"></label>
-                <div class="custom-file">
-                    <input asp-for="ImageFile" class="custom-file-input" id="customFile">
-                    <label class="custom-file-label" for="customFile">Choose file</label>
+    <div class="row">
+        <div class="col-md-6">
+            <form asp-action="Edit" method="post" enctype="multipart/form-data">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Image" class="control-label" hidden></label>
+                    <input asp-for="Image" class="form-control" type="hidden" />
+                    <span asp-validation-for="Image" class="text-danger"></span>
                 </div>
-                <span asp-validation-for="ImageFile" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Speichern" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-    <div class="col-sm">
-        <div class="card mb-3">
-            <img class="card-img-top" src="~/images/@Model.Image" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">@Model.CategoryName</h5>
-                <p class="card-text">@Model.Description</p>
+                <div class="form-group">
+                    <label asp-for="CategoryName" class="control-label"></label>
+                    <input asp-for="CategoryName" class="form-control" />
+                    <span asp-validation-for="CategoryName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Description" class="control-label"></label>
+                    <textarea id="editor" asp-for="Description" class="form-control"></textarea>
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ImageFile" class="control-label"></label>
+                    <div class="custom-file">
+                        <input asp-for="ImageFile" class="custom-file-input" id="customFile">
+                        <label class="custom-file-label" for="customFile">Choose file</label>
+                    </div>
+                    <span asp-validation-for="ImageFile" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Speichern" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+        <div class="col-sm">
+            <div class="card mb-3">
+                <img class="card-img-top" src="~/images/@Model.Image" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">@Model.CategoryName</h5>
+                    <p class="card-text">@Model.Description</p>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </div>
 
 <div>
@@ -59,4 +59,11 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="~/lib/Trumbowyg-main/dist/trumbowyg.min.js"></script>
+    <script>
+        $('#editor').trumbowyg();
+    </script>
+
 }
