--- a/MVC_Product_Manager/Views/Shared/_CategoryViewPartial.cshtml
+++ b/MVC_Product_Manager/Views/Shared/_CategoryViewPartial.cshtml
@@ -4,7 +4,7 @@
     @foreach (var item in Model)
     {
         <div class="card">
-            <img class="card-img-top" src="~/images/@item.Image" alt="Card image cap">
+            <img class="card-img-top" src="~/images/@item.Image" alt="~/images/user-g3caffd83d_640.png">
             <div class="card-body">
                 <h5 class="card-title">@item.CategoryName</h5>
                 <p class="card-text">@Html.Raw(item.Description)</p>
