--- a/MVC_Product_Manager/Views/Shared/_Layout.cshtml
+++ b/MVC_Product_Manager/Views/Shared/_Layout.cshtml
@@ -26,11 +26,14 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
-                        </li>                        
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                         </li>
                     </ul>
+                        <form class="form-inline my-2 my-lg-0" method="get"> @*asp-controller="Categories" asp-action="Index"*@
+                            <input class="form-control mr-sm-2" type="search" name="search" placeholder="Search" aria-label="Search">
+                        </form>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
