--- a/MVC_Product_Manager/Views/Product/Index.cshtml
+++ b/MVC_Product_Manager/Views/Product/Index.cshtml
@@ -3,63 +3,45 @@
 @{
     ViewData["Title"] = "Index";
 }
+@{
+    ViewData["Title"] = "Kategorien";
 
+    Pagination pagination = new Pagination();
+    int pageNr = 0;
+    if (ViewBag.Pagination != null)
+    {
+        pagination = ViewBag.Pagination;
+        pageNr = pagination.CurrentPage;
+    }
+}
 <h1>Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Category.CategoryName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ArtNr)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Brand)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Image)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category.CategoryName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ArtNr)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Brand)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Image)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="card-columns">
+    @foreach (var item in Model)
+    {
+        <div class="card">
+            <img class="card-img-top" src="~/images/@item.Image" alt="~/images/user-g3caffd83d_640.png">
+            <div class="card-body">
+                <h5 class="card-title">@item.ProductName</h5>
+                <h6 class="card-title">@item.Category.CategoryName</h6>
+                <p class="card-text">@Html.Raw(item.Description)</p>
+                @*<p class="card-text">@item.Description.</p>*@
+            </div>
+            <div class="card-footer">
+                <p class="card-subtitle">@item.ArtNr</p>
+                <p class="card-text">
+                    <small class="text-muted">
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary">Edit</a>
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary">Details</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a>
+                    </small>
+                </p>
+            </div>
+        </div>
+    }
+</div>
+<partial name="_PaginationView" model="@pagination" />
+
