--- a/MVC_Product_Manager/Views/Categories/ListOfProducts.cshtml
+++ b/MVC_Product_Manager/Views/Categories/ListOfProducts.cshtml
@@ -1,18 +1,35 @@
-﻿@model IEnumerable<MVC_Product_Manager.Models.Category>
+﻿@model IEnumerable<MVC_Product_Manager.Models.Product>
 
+@{
+    ViewData["Title"] = "List of Products in the Category";
+}
+@{
+
+    Pagination pagination = new Pagination();
+    int pageNr = 0;
+    if (ViewBag.Pagination != null)
+    {
+        pagination = ViewBag.Pagination;
+        pageNr = pagination.CurrentPage;
+    }
+}
+<h1>List of Products in the Category</h1>
+
+<p>
+    <a asp-action="Create" asp-controller="Product">Create New</a>
+</p>
 <div class="card-columns">
     @foreach (var item in Model)
     {
         <div class="card">
-            <a  asp-action="Details" asp-route-id="@item.Id">
             <img class="card-img-top" src="~/images/@item.Image" alt="~/images/user-g3caffd83d_640.png">
-            </a>
             <div class="card-body">
-                <a asp-action="Details" asp-route-id="@item.Id"><h5 class="card-title">@item.CategoryName</h5></a>
+                <h5 class="card-title">@item.ProductName</h5>
                 <p class="card-text">@Html.Raw(item.Description)</p>
                 @*<p class="card-text">@item.Description.</p>*@
             </div>
             <div class="card-footer">
+                <p class="card-subtitle">@item.ArtNr</p>
                 <p class="card-text">
                     <small class="text-muted">
                         <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary">Edit</a>
@@ -20,8 +37,9 @@
                         <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a>
                     </small>
                 </p>
-                        <a asp-action="ListOfProducts" asp-route-id="@item.Id" >Produkte Anzeigen</a>
             </div>
         </div>
     }
 </div>
+<partial name="_PaginationView" model="@pagination" />
+
