--- a/MVC_Product_Manager/Views/Product/Index.cshtml
+++ b/MVC_Product_Manager/Views/Product/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MVC_Product_Manager.Models.Product>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Produkte";
 }
 @{
 
