--- a/MVC_Product_Manager/Views/Categories/Index.cshtml
+++ b/MVC_Product_Manager/Views/Categories/Index.cshtml
@@ -1,18 +1,7 @@
-﻿@model IEnumerable<MVC_Product_Manager.Models.Category>
-@inject Microsoft.AspNetCore.Http.IHttpContextAccessor _httpContextAccessor
-@{
-    string pageSizeA = _httpContextAccessor.HttpContext.Request.Query["pageSizeA"].ToString();
-}
+﻿@model MVC_Product_Manager.ViewModel.CategoryViewModel
+
 @{
     ViewData["Title"] = "Kategorien";
-
-    Pagination pagination = new Pagination();
-    int pageNr = 0;
-    if (ViewBag.Pagination != null)
-    {
-        pagination = ViewBag.Pagination;
-        pageNr = pagination.CurrentPage;
-    }
 }
 
 
@@ -22,29 +11,26 @@
     <a asp-action="Create" class="btn btn-primary">Kategorie erstellen</a>
 </p>
 
-<form method="get">
-    @*asp-controller="Categories" asp-action="Index"*@
-    <input type="hidden" name="pageSizeA" value="@pageSizeA" />
-    <input type="text" name="search" class="input" placeholder=" Search" />
-    <input type="submit" class="btn btn-secondary" />
-</form>
 
 <form method="get">
-    <div class="col-md-10">
-
-
-        @Html.DropDownList("pageSizeA", new List<SelectListItem>
-                {
-                   new SelectListItem{ Text="2", Value = "2" },
-                   new SelectListItem{ Text="3", Value = "3" },
-                  new SelectListItem{ Text="5", Value = "5" },
-                },
-                new { @onchange = "this.form.submit();" }
-                )
-
+    <hr />
+    <div class="input-group mb-3">
+        <input type="text" name="search" class="input" placeholder=" Search" value="@Model.Search" />
+        <div class="input-group-append">
+            <input type="submit" class="btn btn-outline-secondary" />
+        </div>
+    </div>
+    <hr />
+    <div class="dropdown">
+        <button  class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown button
+        </button>
+        <div class="dropdown-menu" id="customdropdown" aria-labelledby="dropdownMenuButton">
+            <a asp-action="Index" asp-route-pageSizeA="1" asp-route-search="@Model.Search" asp-route-pg="@Model.Page" class="dropdown-item">1</a>
+            <a asp-action="Index" asp-route-pageSizeA="2" asp-route-search="@Model.Search" asp-route-pg="@Model.Page" class="dropdown-item">2</a>
+            <a asp-action="Index" asp-route-pageSizeA="3" asp-route-search="@Model.Search" asp-route-pg="@Model.Page" class="dropdown-item">3</a>
+        </div>
     </div>
 </form>
-
-
-<partial name="_CategoryViewPartial" model="Model" />
-<partial name="_PaginationView" model="@pagination" />
+<partial name="_CategoryViewPartial" model="@Model.Categories" />
+<partial name="_PaginationView" model="@Model.Pagination" />
