--- a/MVC_Product_Manager/Views/Categories/ListOfProducts.cshtml
+++ b/MVC_Product_Manager/Views/Categories/ListOfProducts.cshtml
@@ -4,7 +4,6 @@
     ViewData["Title"] = "List of Products in the Category";
 }
 @{
-
     Pagination pagination = new Pagination();
     int pageNr = 0;
     if (ViewBag.Pagination != null)
@@ -14,32 +13,38 @@
     }
 }
 <h1>List of Products in the Category</h1>
-
+<hr />
 <p>
     <a asp-action="Create" asp-controller="Product">Create New</a>
 </p>
-<div class="card-columns">
-    @foreach (var item in Model)
-    {
-        <div class="card">
-            <img class="card-img-top" src="~/images/@item.Image" alt="~/images/user-g3caffd83d_640.png">
-            <div class="card-body">
-                <h5 class="card-title">@item.ProductName</h5>
-                <p class="card-text">@Html.Raw(item.Description)</p>
-                @*<p class="card-text">@item.Description.</p>*@
+<div class="row">
+
+    <div class="col">
+        @foreach (var item in Model)
+        {
+            <div class="media">
+            @if (item.Image != null)
+            {
+                <img class="mr-3" src="~/images/@item.Image" alt="~/images/user-g3caffd83d_640.png" style="width: 64px; height:64px;">
+            }
+            else
+            {
+                <img class="mr-3" src="~/images/default/default.png" alt="HalloWelt" style="width: 64px; height:64px;">
+            }
+            <div class="media-body">
+                <h5 class="mt-0">@item.ProductName</h5>
+                <p>@Html.Raw(item.Description)</p>
             </div>
-            <div class="card-footer">
-                <p class="card-subtitle">@item.ArtNr</p>
-                <p class="card-text">
-                    <small class="text-muted">
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary">Edit</a>
-                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary">Details</a>
-                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a>
-                    </small>
-                </p>
+            <a asp-action="Edit" asp-route-id="@item.Id" asp-controller="Product">Edit </a> |
+            <a asp-action="Details" asp-route-id="@item.Id" asp-controller="Product"> Details</a> |
+            <a asp-action="Delete" asp-route-id="@item.Id" asp-controller="Product"> Delete</a>
             </div>
-        </div>
-    }
-</div>
-<partial name="_PaginationView" model="@pagination" />
+        }
+    </div>
+
+    </div>
+    <p>
+        <a asp-action="Index">Back to Category List</a>
+    </p>
+    <partial name="_PaginationView" model="@pagination"/>
 
